# FYP

./: .env.example  .gitignore  .vercelignore  AGENTS.md  README.md  design-qa.md  pyproject.toml  pytest.ini  requirements.txt  run_app.ps1  run_local_server.cmd
api/: index.py
docs/: academic-analysis.md  algorithm-comparison.md  business-analysis-handover.md  database-guide.md  demo-script.md  find-your-path-20min-defense-slides.pptx  find-your-path-complete-slide.pptx  find-your-path-report-reordered.docx  find-your-path-report.docx  find-your-path-slides.pptx  find-your-path-template-polished-v2-slides.pptx  find-your-path-template-remix-slides.pptx  find-your-path-urban-tech-v3-slides.pptx  find-your-path-v5-speaking-notes.md  report-outline.md  skill-style-comparison-slides.pptx  ui-ux-overview.md
docs/presentation-assets/find-your-path-image-rich-v4/: append_webapp_slides_v6.mjs  build_algorithm_focused_deck_v5.mjs  build_image_rich_deck_v4.mjs  design-notes.txt
scripts/: expand_report_to_30_pages.py  extend_discussion_and_fix_toc.py  import_osm_graph.py  inspect_db.py  pre_check.ps1  rebuild_long_ai_report.py  reorder_report_algorithm_groups.py
src/app/: __init__.py  flet_ui.py  main.py  map_ui.py  web_ui.py
src/app/algorithms/: __init__.py  adversarial.py  complex.py  constraints.py  delivery.py  events.py  graph.py  rl.py  search.py
src/app/api/: __init__.py  admin.py  algorithms.py  auth.py  maps.py  scenario.py  shipper.py  system.py
src/app/data/: __init__.py  osm_hcm_q1.json  scenario.py
tests/: test_algorithms.py  test_api_auth_shipper.py
(+15 files in other folders)
