[project]
name = "find-your-path"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.4",
    "pytest==8.3.4",
    "httpx==0.28.1",
    "flet==0.28.3",
    "flet-web==0.28.3",
    "flet-map==0.1.0",
]

[tool.vercel]
entrypoint = "api.index:app"
